tests/lean/1292.lean
def fn (n : nat) : nat :=
match n with

#exit

theorem thm : true := begin end

example : has_add nat := sorry
